Fixed section title on mobile

--- a/themes/GCI/scr/scss/base.scss
+++ b/themes/GCI/scr/scss/base.scss
@@ -56,4 +56,8 @@ body {
   color: $primary;
   font-weight: bold;
   font-size: 3rem;
+
+  @include media-breakpoint-down(sm) {
+    font-size: 2rem;
+  }
 }
